--- a/src/app/admin/inventory/inventory.component.html
+++ b/src/app/admin/inventory/inventory.component.html
@@ -16,7 +16,7 @@
             <button mat-raised-button color="primary" class="ml-3" style="float: right;" (click)="exporter.exportTable('csv', {fileName:'Danh sách tồn kho'})">Xuất Excel</button>
             <table mat-table matTableExporter #exporter="matTableExporter" [hiddenColumns]="[0]" [dataSource]="listData" matSort class="mat-elevation-z8">
                 <ng-container matColumnDef="image">
-                    <th mat-header-cell *matHeaderCellDef style="width: 10%;"></th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 10%;">Hình ảnh</th>
                     <td mat-cell *matCellDef="let row">
                         <img [src]="row.image" width="60px" class="p-1">
                     </td>
