--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -38,7 +38,7 @@
             </div>
             <table mat-table matTableExporter #exporter="matTableExporter" [hiddenColumns]="[0,7,8]" [dataSource]="listData" matSort class="mat-elevation-z8">
                 <ng-container matColumnDef="image">
-                    <th mat-header-cell *matHeaderCellDef style="width: 10%;"></th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 10%;">Hình ảnh</th>
                     <td mat-cell *matCellDef="let row">
                         <img [src]="row.image" width="60px" class="p-1">
                     </td>
@@ -64,11 +64,11 @@
                     <td mat-cell *matCellDef="let row">{{row.category.categoryName}}</td>
                 </ng-container>
                 <ng-container matColumnDef="enteredDate">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%;">Ngày thêm</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;">Ngày thêm</th>
                     <td mat-cell *matCellDef="let row">{{row.enteredDate|date:'dd-MM-yyyy'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="view">
-                    <th mat-header-cell *matHeaderCellDef style="width: 4%;">Xem</th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 6%;">Chỉnh sửa</th>
                     <td mat-cell *matCellDef="let row">
                         <app-edit-product [id]="row.productId" (editFinish)="finish()"></app-edit-product>
                     </td>
