--- a/src/app/admin/customer/customer.component.html
+++ b/src/app/admin/customer/customer.component.html
@@ -36,11 +36,11 @@
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="userId">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 5%;">ID</th>
-                    <td mat-cell *matCellDef="let row">{{row.userId}}</td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;">ID</th>
+                    <td mat-cell *matCellDef="let row">KH_{{row.userId}}_{{row.registerDate | date:'ddMMyyyy'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 19%;">Họ tên</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;">Họ tên</th>
                     <td mat-cell *matCellDef="let row">{{row.name}}</td>
                 </ng-container>
                 <ng-container matColumnDef="email">
