--- a/src/app/admin/order/order.component.html
+++ b/src/app/admin/order/order.component.html
@@ -17,11 +17,11 @@
                 <div class="col-md-6">
                     <div class="legend-container">
                         <div class="legend-item">
-                            <span class="legend-color" style="background-color: #FB8B24;"></span>
+                            <span class="legend-color" style="background-color: #F6B17A;"></span>
                             <span class="legend-text">Đang cần xử lí đơn</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color" style="background-color: #4CB9E7;"></span>
+                            <span class="legend-color" style="background-color: #7FC7D9;"></span>
                             <span class="legend-text">Đang giao hàng</span>
                         </div>
                         <div class="legend-item">
@@ -29,7 +29,7 @@
                             <span class="legend-text">Đã giao thành công</span>
                         </div>
                         <div class="legend-item">
-                            <span class="legend-color" style="background-color: #BE3144;"></span>
+                            <span class="legend-color" style="background-color: #EF6262;"></span>
                             <span class="legend-text">Đơn đã hủy</span>
                         </div>
                     </div>
@@ -37,15 +37,15 @@
             </div>
             <table mat-table matTableExporter #exporter="matTableExporter" [hiddenColumns]="[7]" [dataSource]="listData" matSort class="mat-elevation-z8">
                 <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 9%;">Mã HĐ</th>
-                    <td mat-cell *matCellDef="let row">{{row.ordersId}}</td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%;">Mã HĐ</th>
+                    <td mat-cell *matCellDef="let row">HD_{{row.ordersId}}_{{row.orderDate | date:'ddMMyyyy'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="user">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Khách hàng</th>
                     <td mat-cell *matCellDef="let row">{{row.user.name}}</td>
                 </ng-container>
                 <ng-container matColumnDef="address">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 30%;">Địa chỉ</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 32%;">Địa chỉ</th>
                     <td mat-cell *matCellDef="let row">{{row.address}}</td>
                 </ng-container>
                 <ng-container matColumnDef="phone">
@@ -61,7 +61,7 @@
                     <td mat-cell *matCellDef="let row">{{row.orderDate|date:'dd-MM-yyyy'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="status">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%;">Trạng thái</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;">Trạng thái</th>
                     <td mat-cell *matCellDef="let row">{{row.status==0?"Đợi shop xử lí đơn":row.status==1?"Đang giao hàng":row.status==2?"Đã giao thành công":"Đã huỷ"}}</td>
                 </ng-container>
                 <ng-container matColumnDef="view">
@@ -72,7 +72,7 @@
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="columns"></tr>
-                <tr mat-row *matRowDef="let row; columns: columns;" [style.background-color]="row.status==0?'#FB8B24':row.status==1?'#4CB9E7':row.status==2?'#A1EEBD':'#BE3144'"></tr>
+                <tr mat-row *matRowDef="let row; columns: columns;" [style.background-color]="row.status==0?'#F6B17A':row.status==1?'#7FC7D9':row.status==2?'#A1EEBD':'#EF6262'"></tr>
             </table>
             <mat-paginator [length]="orderLength" showFirstLastButtons [pageSize]="12" [pageSizeOptions]="[10, 12, 25, 50, 100]">
             </mat-paginator>
