--- a/src/app/admin/statistical-category/statistical-category.component.html
+++ b/src/app/admin/statistical-category/statistical-category.component.html
@@ -15,12 +15,12 @@
             <button mat-raised-button color="primary" class="ml-3" style="float: right;" (click)="exporter.exportTable('csv', {fileName:'Danh mục có sản phẩm bán chạy nhất'})">Xuất Excel</button>
             <table mat-table matTableExporter #exporter="matTableExporter" [hiddenColumns]="[0]" [dataSource]="listData" matSort class="mat-elevation-z8">
                 <ng-container matColumnDef="index">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>STT</th>
-                    <td mat-cell *matCellDef="let row, let i = index">{{i+1}}</td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Mã danh mục</th>
+                    <td mat-cell *matCellDef="let row" style="width: 20%;">LDM_{{getCatogoryIdName(row.name)}}</td>
                 </ng-container>
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên loại hàng</th>
-                    <td mat-cell *matCellDef="let row" style="width: 30%;">{{row.name}}</td>
+                    <td mat-cell *matCellDef="let row" style="width: 25%;">{{row.name}}</td>
                 </ng-container>
                 <ng-container matColumnDef="count">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Tổng sản phẩm bán được</th>
